--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.2",
     "debug": "~2.6.9",
     "express": "^4.19.1",
+    "htmx.org": "^1.9.11",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "^3.0.2"
